--- a/index.html
+++ b/index.html
@@ -2,22 +2,135 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="burger.css" />
     <title>Company24</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet/less" type="text/css" href="styles.less" />
+    <link rel="stylesheet" href="icons.css">
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/less" ></script>
+    <script src="https://kit.fontawesome.com/4c4021aaba.js" crossorigin="anonymous"></script>
 </head>
 <body>
+<div class="popup" id="popup">
+    <div class="menu" id="menu">
+        <ul id = "nav_mob">
+            <li><a href="#"></a>Преимущества</li>
+            <li><a href="#"></a>О нас</li>
+            <li><a href="#"></a>Услуги</li>
+            <li><a href="#"></a>Команда</li>
+            <li><a href="#"></a>Отзывы</li>
+            <li style="padding-bottom: 52px; margin-bottom: 0"><a href="#"></a>Контакты</li>
+        </ul>
+        <ul id="social_network_mob">
+            <li><a href="#" style="margin-left: 0"><i  class="_icon-whatsapp icon"></i></a></li>
+            <li><a href="#"><i class="_icon-telegram icon"></i></a></li>
+            <li><a href="#"><i  class="_icon-instagram icon"></i></a></li>
+            <li><a href="#" style="margin-right: 0;font-size: 15px"><i class="_icon-vk icon"></i></a></li>
+        </ul>
+    </div>
+</div>
 
-    <header>
-
+    <header class="header">
+        <div class="wrapper" style="display: flex; flex-direction: row; align-items: center">
+            <a href="#"><img class="logo_header" src="img/logo.svg"></a>
+            <nav style="margin: auto">
+                <ul>
+                    <span class="inner-wrapper wrapper-15">
+                        <a class="link hover-15" href="#">Преимущества</a>
+                    </span>
+                    <span class="inner-wrapper wrapper-15">
+                        <a class="link hover-15" href="#">О нас</a>
+                    </span>
+                    <span class="inner-wrapper wrapper-15">
+                        <a class="link hover-15" href="#">Услуги</a>
+                    </span>
+                    <span class="inner-wrapper wrapper-15">
+                        <a class="link hover-15" href="#">Команда</a>
+                    </span>
+                    <span class="inner-wrapper wrapper-15">
+                        <a class="link hover-15" href="#">Отзывы</a>
+                    </span>
+                    <span class="inner-wrapper wrapper-15">
+                        <a class="link hover-15" href="#">Контакты</a>
+                    </span>
+                </ul>
+            </nav>
+            <ul id="social_network">
+                <li><a href="#" style="margin-left: 0"><i  class="_icon-whatsapp icon"></i></a></li>
+                <li><a href="#"><i class="_icon-telegram icon"></i></a></li>
+                <li><a href="#"><i  class="_icon-instagram icon"></i></a></li>
+                <li><a href="#" style="margin-right: 0;font-size: 15px"><i class="_icon-vk icon"></i></a></li>
+            </ul>
+            <div id="nav-icon3">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </div>
     </header>
 
-    <main>
-
+    <main class="main">
+        <div class="accordion-body">
+            <div class="accordion">
+                <p class="accordion_header">Часто задаваемые вопросы</p>
+                <div class="container">
+                    <div class="label">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Nunc vulputate libero et velit?</div>
+                    <div class="content"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero
+                        et velit interdum, ac aliquet odio mattis. Class aptent taciti sociosqu ad litora torquent per
+                        conubia nostra, per inceptos himenaeos. Curabitur tempus urna at turpis condimentum lobortis.</p>
+                    </div>
+                </div>
+                <hr>
+                <div class="container">
+                    <div class="label">Lorem ipsum dolor sit amet?</div>
+                    <div class="content"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero
+                        et velit interdum, ac aliquet odio mattis. Class aptent taciti sociosqu ad litora torquent per
+                        conubia nostra, per inceptos himenaeos. Curabitur tempus urna at turpis condimentum lobortis.</p>
+                    </div>
+                </div>
+                <hr>
+                <div class="container">
+                    <div class="label">Lorem ipsum dolor sit amet?</div>
+                    <div class="content"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero
+                        et velit interdum, ac aliquet odio mattis. Class aptent taciti sociosqu ad litora torquent per
+                        conubia nostra, per inceptos himenaeos. Curabitur tempus urna at turpis condimentum lobortis.</p>
+                    </div>
+                </div>
+                <hr>
+                <div class="container">
+                    <div class="label">Lorem ipsum dolor sit amet?</div>
+                    <div class="content"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero
+                        et velit interdum, ac aliquet odio mattis. Class aptent taciti sociosqu ad litora torquent per
+                        conubia nostra, per inceptos himenaeos. Curabitur tempus urna at turpis condimentum lobortis.</p>
+                    </div>
+                </div>
+                <hr>
+                <div class="container">
+                    <div class="label">Lorem ipsum dolor sit amet?</div>
+                    <div class="content"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero
+                        et velit interdum, ac aliquet odio mattis. Class aptent taciti sociosqu ad litora torquent per
+                        conubia nostra, per inceptos himenaeos. Curabitur tempus urna at turpis condimentum lobortis.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 
-    <footer>
-
+    <footer style="display: flex; align-items: center">
+        <div class="wrapper">
+            <div>
+                <p id="rights">© 2022 All rights reserved.</p>
+            </div>
+            <div id="made_by">
+                <p style="padding-right: 10px">Made by</p>
+                <p title="Bambit - агентство цифровой трансформации" class="bambit">BAMBIT</p>
+            </div>
+        </div>
     </footer>
+
+    <script src="index.js" type="text/javascript"></script>
 
 </body>
 </html>
