--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="burger.css" />
     <title>Company24</title>
     <link rel="stylesheet/less" type="text/css" href="styles.less" />
